implement appointments endpoints
